--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "loadash": "^1.0.0",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "underscore": "^1.13.1",
     "validator": "^13.7.0"
   },
   "jest": {
