--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "loadash": "^1.0.0",
     "mongoose": "^6.0.12",
+    "mongoose-autopopulate": "^0.16.0",
     "morgan": "^1.10.0",
     "underscore": "^1.13.1",
     "validator": "^13.7.0"
